// -- -- //

Table Pessoa {
  cpf char(14) [pk]
  nome_completo varchar(128)
  data_de_nascimento char(10)
  contato uuid [ref: - Contato.id]
  endereco uuid [ref: - Endereco.id]
}

Table Contato {
  id uuid [pk]
  telefone_1 varchar(14) // char ?
  telefone_2 varchar(14) // char ?
  email varchar(256) // https://www.rfc-editor.org/rfc/rfc5321#section-4.5.3
}

Table Endereco {
  id uuid [pk]
  cidade char(7) // https://www.ibge.gov.br/explica/codigos-dos-municipios.php
  uf char(2)
  cep char(8)
  logradouro varchar(128)
  numero varchar(16)
  bairro varchar(64)
  complemento varchar(256)
}

Table Estudante {
  rga char(12) [pk]
  pessoa char(11) [ref: - Pessoa.cpf]
  curso int [ref: - Curso.id]
  unidade int [ref: > Unidade.id]
  contato uuid [ref: - Contato.id]
}

Table Professor {
  rga char(12) [pk]
  pessoa char(11) [ref: - Pessoa.cpf]
  unidade int [ref: > Unidade.id]
  contato uuid [ref: - Contato.id]
}

Table Unidade {
  id int [pk]
  nome varchar(32)
}

Table Curso {
  id int [pk]
  nome varchar(32)
  unidade int [ref: > Unidade.id]
}

// -- -- //
